--- a/FootballMan/app/build.gradle
+++ b/FootballMan/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
@@ -27,9 +27,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
-    compile 'android.arch.persistence.room:rxjava2:1.0.0-alpha9'
-    compile 'android.arch.persistence.room:runtime:1.0.0-alpha9'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha9'
     implementation 'com.android.support:recyclerview-v7:26.0.1'
     implementation 'com.android.support:design:26.0.1'
 }
