--- a/streetviewExample/app/src/main/AndroidManifest.xml
+++ b/streetviewExample/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-                  >
+                  android:configChanges="screenSize|keyboardHidden|orientation">
 
         </activity>
 
