--- a/FootballMan/build.gradle
+++ b/FootballMan/build.gradle
@@ -7,10 +7,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
         classpath "io.realm:realm-gradle-plugin:3.5.0"
-
-        // NOTE: Do not place your application dependencies here; they belong
+        classpath 'com.google.gms:google-services:3.1.0'
+        // note: do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
