--- a/FootballMan/app/build.gradle
+++ b/FootballMan/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     implementation 'com.android.support:recyclerview-v7:26.0.1'
     implementation 'com.android.support:design:26.0.1'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile group: 'com.opencsv', name: 'opencsv', version: '3.5'
 }
